# astrogea

./: .gitignore  LICENSE  README.md  astrogea.md  mafic_analysis.py  out_continuum_textual  out_continuum_textual.csv  pyproject.toml  readme.md  requirements-dev.txt  spectral_coregistration.py  temp.md  test_astrogea.fits  test_astrogea.py
astrogea/: __init__.py  cli.py  core.py  spectral_wrapper.py  wcs_utils.py
examples/: Crism2WCS.py  ReadWCS.py  ReadWCS2.py  load_xarray.py  main.py  requirements.txt  spectral_dask.py  spectral_test.py  test_mafic.py  xarray_plot.py
tests/: test_core.py  test_newfunc.py  test_smoothing.py  test_spectral.py
